@@ -15,7 +15,7 @@
 IndexUtils() implements a simple iterator over a linear index of objects -
 
 """
-__docformat__ = "restructuredtext en"
+__docformat__ = "google en"
 __author__ = "John Westbrook"
 __email__ = "john.westbrook@rcsb.org"
 __license__ = "Apache 2.0"
