@@ -19,7 +19,7 @@ Tests for extraction, supplementing and packaging dictionary metadata for schema
 
 """
 
-__docformat__ = "restructuredtext en"
+__docformat__ = "google en"
 __author__ = "John Westbrook"
 __email__ = "jwest@rcsb.rutgers.edu"
 __license__ = "Apache 2.0"
