@@ -398,17 +398,25 @@ class UrlRequestUtilTests(unittest.TestCase):
         """ChemSearch repetition GET protocol test (using requests module)"""
         # baseUrl = "http://132.249.213.119"
         # baseUrl = "http://132.249.213.210"
-        baseUrl = "https://chemsearch-west.rcsb.org"
+        # dev instances east
+        # baseUrl = "http://128.6.159.86"
+        #
+        # Production west instances
+        # baseUrlList = ["http://132.249.213.210", "http://132.249.213.110", "https://chemsearch-west.rcsb.org"]
+        # baseUrlList = ["http://128.6.159.86"]
+        baseUrlList = ["https://chemsearch-west.rcsb.org", "https://chemsearch-east.rcsb.org"]
+        #
         endPoint = "chem-match-v1/InChI"
         resultLen = 13
         descr = "InChI=1S/C9H15N5O3/c1-3(15)6(16)4-2-11-7-5(12-4)8(17)14-9(10)13-7/h3-4,6,12,15-16H,2H2,1H3,(H4,10,11,13,14,17)/t3-,4-,6-/m1/s1"
         try:
-            pD = {"query": descr, "matchType": "fingerprint-similarity"}
-            for ii in range(10):
-                ureq = UrlRequestUtil()
-                ret, retCode = ureq.getUnWrapped(baseUrl, endPoint, pD, headers={}, sslCert="enable", returnContentType="JSON")
-                if len(ret["matchedIdList"]) > resultLen:
-                    logger.info(">>> %3d (%r) result length %r", ii, retCode, len(ret["matchedIdList"]))
+            for baseUrl in baseUrlList:
+                pD = {"query": descr, "matchType": "fingerprint-similarity"}
+                for ii in range(100):
+                    ureq = UrlRequestUtil()
+                    ret, retCode = ureq.getUnWrapped(baseUrl, endPoint, pD, headers={}, sslCert="enable", returnContentType="JSON")
+                    if len(ret["matchedIdList"]) != resultLen:
+                        logger.info(">>> %3d (%r) (%r) result length %r", ii, baseUrl, retCode, len(ret["matchedIdList"]))
         except Exception as e:
             logger.exception("Failing with %s", str(e))
             self.fail()
