@@ -101,3 +101,4 @@
 26-Feb-2021  - V1.00 Change pickle.HIGHEST_PROTOCOL to pickle.DEFAULT_PROTOCOL
 10-Mar-2021  - V1.01 Add noRetry argument to FileUtil.get()
 10-May-2021  - V1.12 Update FASTA parser in FastaUtil()
+11-Jun-2021  - V1.13 Add StashableBase() module
